# pi-top-Offline-Updates

./: .gitignore  .pre-commit-config.yaml  99-usb-drive-for-pitop-setup.rules  MANIFEST.in  README.rst  conftest.py  download-packages.sh  handle-usb-drive-for-pi-top-setup  pi-top-offline.source  setup.cfg  setup.py
.github/workflows/: create-usb-setup-file.yml  download-packages.yml  generate-packages.yml  test.yml
debian/: changelog  control  copyright  pi-top-usb-setup.install  pi-top-usb-setup.lintian-overrides  pi-top-usb-setup.postinst  pi-top-usb-setup.postrm  pt-configure-system.service  pt-usb-setup.service  pt-usb-setup@.service  py3dist-overrides  rules
debian/bullseye-overrides/: pi-top-usb-setup.lintian-overrides
debian/extra/: 99-usb-drive-for-pitop-setup.rules
extra/: 99-usb-drive-for-pitop-setup.rules  handle-usb-drive-for-pi-top-setup
pi_top_usb_setup/: __init__.py  __main__.py  app.py  app_fs.py  common.py  configure.py  exceptions.py  file_structure.py  mixins.py  network.py  operations.py  root.py  system_updater.py  usb_file_structure.py  utils.py
pi_top_usb_setup/extra/: handle-usb-drive-for-pi-top-setup  pi-top-offline.list
pi_top_usb_setup/operations/: __init__.py  core.py  mount_point.py
pi_top_usb_setup/pages/: __init__.py  confirm_setup.py  run_setup.py  setup_status.py
tests/: data.py  requirements.txt  test_app_fs.py  test_network_classes.py  test_operations.py  test_utils.py
tests/certs/: client.pem  user.key
