[metadata]
name = pi-top-usb-setup
description = pi-top USB Setup
long_description = file: README.rst
long_description_content_type = text/x-rst
author = pi-top (CEED Ltd)
author_email = os-dev@pi-top.com
url = https://github.com/pi-top/pi-top-Offline-Updates
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9, <4
install_requires =
    click_logging
    click >= 7.1.2
    pt_miniscreen
    pitop.common
    pitop.system
    pt_os_web_portal

[options.package_data]
* = *.gif, *.png

[options.entry_points]
console_scripts =
    pt-usb-setup = pi_top_usb_setup.__main__:main

[bdist_wheel]
universal = 1

[flake8]
per-file-ignores =
    __init__.py: F401
    test_*: E402
# https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
extend-ignore = E203
max-line-length = 150

[isort]
profile = black

[pep8]
max-line-length = 150

[tool:pytest]
addopts = -n auto --dist=loadfile
